ajout des div boissons par sortes

--- a/carte.html
+++ b/carte.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
+  <h1>Nos Boissons</h1>
+  <div class="pression">
+  </div>
+  <div class="bchaude">
+  </div>
+  <div class="bouteillebiere">
+  </div>
+  <div class="soft">
+  </div>
+  <div class="spiritueux">
+  </div>
+  <div class="eaux">
+  </div>
+  <div class="vins">
+  </div>
+  <div class="nourriture">
+  </div>
 </body>
 
 </html>
