Ajout des titres des boissons

--- a/carte.html
+++ b/carte.html
@@ -15,20 +15,84 @@
 <body>
   <h1>Nos Boissons</h1>
   <div class="pression">
+    <h2>Bière blonde</h2>
+    <h2>Bière brune</h2>
+    <h2>Bière spéciale</h2>
+    <h2>Bière d'abbaye</h2>
+    <h2>Panaché</h2>
   </div>
   <div class="bchaude">
+    <h2>Expresso</h2>
+    <h2>Café grande tasse</h2>
+    <h2>Décaféiné</h2>
+    <h2>Café crème petit</h2>
+    <h2>Café crème grand</h2>
+    <h2>Chocolat</h2>
+    <h2>Thé/Infusion</h2>
+    <h2>Lait</h2>
+    <h2>Vin chaud</h2>
+    <h2>Café gourmand</h2>
   </div>
   <div class="bouteillebiere">
+    <h2>Bière blonde</h2>
+    <h2>Bière brune</h2>
+    <h2>Bière spéciale</h2>
+    <h2>Bière sans alcool</h2>
+    <h2>Bière d'abbaye</h2>
   </div>
   <div class="soft">
+    <h2>Cola</h2>
+    <h2>Limonade</h2>
+    <h2>Diabolo</h2>
+    <h2>Orangina</h2>
+    <h2>Schweppes</h2>
+    <h2>Perrier</h2>
+    <h2>Perrier avec sirop</h2>
+    <h2>Thé glacé</h2>
+    <h2>Jus de fruit (orange ...)</h2>
+    <h2>Fruits pressés</h2>
   </div>
   <div class="spiritueux">
+    <h2>Anisé</h2>
+    <h2>Martini</h2>
+    <h2>Porto</h2>
+    <h2>Kir</h2>
+    <h2>Suze</h2>
+    <h2>Vodka</h2>
+    <h2>Rhum</h2>
+    <h2>Whisky</h2>
+    <h2>Téquilla</h2>
+    <h2>Gin</h2>
+    <h2>Liqueur</h2>
+    <h2>Cognac</h2>
+    <h2>Armagnac</h2>
+    <h2>Calvados</h2>
+    <h2>Eau de vie</h2>
+    <h2>Liqueur de menthe</h2>
   </div>
   <div class="eaux">
+    <h2>Eau plate</h2>
+    <h2>Eau gazeuse</h2>
+    <h2>Eau avec sirop</h2>
   </div>
   <div class="vins">
+    <h2>Blanc</h2>
+    <h2>Blanc AOC</h2>
+    <h2>Rosé</h2>
+    <h2>Rosé AOC</h2>
+    <h2>Rouge</h2>
+    <h2>Rouge AOC</h2>
+    <h2>Champagne</h2>
+    <h2>Vin effervescent</h2>
   </div>
   <div class="nourriture">
+    <h2>Sandwich</h2>
+    <h2>Hot Dog</h2>
+    <h2>Croque-monsieur</h2>
+    <h2>Croque-madamme</h2>
+    <h2>Petit déjeuner</h2>
+    <h2>Chips</h2>
+    <h2>Saucissons</h2>
   </div>
 </body>
 
