ajout du titre amélioré

--- a/carte.html
+++ b/carte.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/carte.css">
+    <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> 
 </head>
 
 <body class="carte">
