ajout du petit logo

--- a/carte.html
+++ b/carte.html
@@ -10,12 +10,15 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/carte.css">
-    <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet">
 </head>
 
 <body class="carte">
   <!-- Titre de la page -->
+  <div class="enteteboisson">
+  <img src="img/petitlogo.png" alt="logo du Kilberry"/>
   <h1 class="titreboissons">Nos Boissons</h1>
+  </div>
   <!-- conteneur général des deux colonnes -->
   <div class="superconteneur">
     <!-- conteneur de la colonne de gauche -->
