--- a/carte.html
+++ b/carte.html
@@ -24,7 +24,8 @@
     <!-- conteneur de la colonne de gauche -->
     <div class="conteneurboissons">
       <div id="divboissons" class="pression">
-        <h2>Nos Bières Pression</h2>
+        <h2 class="soustitreboisson">Nos Bières Pression</h2>
+        <hr/>
         <h3>Bière blonde</h3>
         <h3>Bière brune</h3>
         <h3>Bière spéciale</h3>
@@ -32,7 +33,8 @@
         <h3>Panaché</h3>
       </div>
       <div id="divboissons" class="bchaude">
-        <h2>Nos Boissons Chaudes</h2>
+        <h2 class="soustitreboisson">Nos Boissons Chaudes</h2>
+        <hr/>
         <h3>Expresso</h3>
         <h3>Café grande tasse</h3>
         <h3>Décaféiné</h3>
@@ -45,7 +47,8 @@
         <h3>Café gourmand</h3>
       </div>
       <div id="divboissons" class="bouteillebiere">
-        <h2>Nos Bières en bouteille</h2>
+        <h2 class="soustitreboisson">Nos Bières en bouteille</h2>
+        <hr/>
         <h3>Bière blonde</h3>
         <h3>Bière brune</h3>
         <h3>Bière spéciale</h3>
@@ -53,7 +56,8 @@
         <h3>Bière d'abbaye</h3>
       </div>
       <div id="divboissons" class="soft">
-        <h2>Nos Softs et Jus de fruits</h2>
+        <h2 class="soustitreboisson">Nos Softs et Jus de fruits</h2>
+        <hr/>
         <h3>Cola</h3>
         <h3>Limonade</h3>
         <h3>Diabolo</h3>
@@ -69,7 +73,8 @@
     <!-- conteneur de la colonne de droite -->
     <div class="conteneurboissons">
       <div id="divboissons" class="spiritueux">
-        <h2>Nos Spiritueux</h2>
+        <h2 class="soustitreboisson">Nos Spiritueux</h2>
+        <hr/>
         <h3>Anisé</h3>
         <h3>Martini</h3>
         <h3>Porto</h3>
@@ -88,13 +93,15 @@
         <h3>Liqueur de menthe</h3>
       </div>
       <div id="divboissons" class="eaux">
-        <h2>Nos eaux</h2>
+        <h2 class="soustitreboisson">Nos eaux</h2>
+        <hr/>
         <h3>Eau plate</h3>
         <h3>Eau gazeuse</h3>
         <h3>Eau avec sirop</h3>
       </div>
       <div id="divboissons" class="vins">
-        <h2>Nos Vins</h2>
+        <h2 class="soustitreboisson">Nos Vins</h2>
+        <hr/>
         <h3>Blanc</h3>
         <h3>Blanc AOC</h3>
         <h3>Rosé</h3>
@@ -105,7 +112,8 @@
         <h3>Vin effervescent</h3>
       </div>
       <div id="divboissons" class="nourriture">
-        <h2>Notre petite restauration</h2>
+        <h2 class="soustitreboisson">Notre petite restauration</h2>
+        <hr/>
         <h3>Sandwich</h3>
         <h3>Hot Dog</h3>
         <h3>Croque-monsieur</h3>
